[package]
name = "server_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
macro_test = { path = "../macro_test" }
# hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }